# ghc

./: .appveyor.sh  .appveyor.yml  .arcconfig  .arclint  .authorspellings  .darcs-boring  .editorconfig  .envrc  .ghci  .ghcid  .git-blame-ignore-revs  .git-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .hlint.yaml  .mailmap  .travis.yml  8.6.5-notes.rst  A2.hs  ANNOUNCE  ANNOUNCE-0.26  ANNOUNCE-2.01  ANNOUNCE-2.02  ANNOUNCE-2.03  ANNOUNCE-2.04  ANNOUNCE-2.05  BUILD.md  Base.hs  Build.hs  CHANGES  CHANGES.md  CODEOWNERS  CONTRIBUTING  CONTRIBUTING.md  CVS-CHEAT-SHEET  Config.hs  DmdIterationLimits.hs  Dockerfile  (+153 more)
.gitlab/: README.md  base-ci.sh  bindist_metadata.py  ci.sh  circle-ci-job.sh  clear-hadrian-cache.sh  common.sh  darwin-init.sh  find-free-drive-letter.bat  fix-submodules.py  gen-ci.cabal  gen_ci.hs  generate_job_metadata  generate_jobs  hello.hs  jobs.yaml  prepare-system.sh  push-test-metrics.sh  shell.nix  start-head.hackage.sh  test-metrics.hs  test-metrics.sh  upload_ghc_libs.py  win32-ci.sh  win32-init.sh
.gitlab/darwin/: toolchain.nix
.gitlab/generate-ci/: LICENSE  README.mkd  flake.nix  gen_ci.hs  generate-ci.cabal  generate-job-metadata  generate-jobs
.gitlab/hadrian/: ValidateSettings.hs
.gitlab/issue_templates/: backport-8.8.md  bug.md  default.md  documentation_issue.md  feature_request.md  get-verified.md  release_tracking.md
.gitlab/linters/: check-changelogs.sh  check-cpp.py  check-makefiles.py  check-notes.hs  check-notes.sh  check-submodules.py  check-version-number.sh  linter.py  tmp
.gitlab/merge_request_templates/: Default.md  Haddock.md  backport-for-8.8.md  feature_request.md  merge-request.md
.gitlab/rel_eng/: default.nix  recompress-all  upload.sh  upload_ghc_libs.py
compiler/supercompile/: .gitignore  CHSC.hs  Supercompile.hs  chsc-plugin.cabal  install-plugin-inplace
doc/: Makefile  README  README.md  aclocal.m4  build-expressions.docx  build-package-data.docx  comment-hi-rule.txt  common-errors.rst  conf.py  config.mk.in  configure.ac  cross-compile.md  deepseq-build-progress.txt  demo.txt  docbook-xml.mk  flavours.md  fptools.css  ghc.mk  haddock.sgml  haddock.xml  index.rst  intro.rst  invoking.rst  markup.rst  meeting-16-June-2015.txt  meeting-25-September-2015.txt  multi-components.rst  user-settings.md  windows.md
doc/cheatsheet/: README.md  haddocks.md
ghc/: .gdbinit  ANNOUNCE  GhciFind.hs  GhciInfo.hs  GhciMonad.hs  GhciTags.hs  GhciTypes.hs  HACKING  InteractiveUI.hs  Jmakefile  LICENSE  Main.hs  Makefile  Makefile.BOOT  PATCHLEVEL  README  RELEASE  VERSION  VERSION.in  aclocal.m4  configure.ac  configure.in  ghc-bin.cabal  ghc-bin.cabal.in  ghc-cross.wrapper  ghc.mk  ghc.spec  ghc.spec.in  ghc.wrapper  glue_TAGS_files.prl  hschooks.c
ghc/CONTRIB/: README  fptags  haskell_poem  mira2hs
ghc/GHCi/: Leak.hs  UI.hs  Util.hs
ghc/InstallShield/: Glasgow Haskell Compiler.ipr  README  decyg.pl  fixdll.pl  runexe.c
ghc/WindowsInstaller/: Glasgow Haskell Compiler.ism  License.rtf  MakeInstaller.txt  announce.rtf
ghc/compiler/: DEPEND-NOTES  HsVersions.h  Jmakefile  Makefile  NOTES  README  Simon-log  count_lines  package.conf.in  root.lit
ghc/docs/: ANNOUNCE-0.06  ANNOUNCE-0.10  ANNOUNCE-0.16  ANNOUNCE-0.19  ANNOUNCE-0.20  ANNOUNCE-0.22  ANNOUNCE-0.23  ANNOUNCE-0.25  ANNOUNCE-0.27  Jmakefile  Makefile  NOTES.adding-PrimOp  NOTES.arbitary-ints  NOTES.c-optimisation  NOTES.core-overview  NOTES.desugar  NOTES.garbage.collection  NOTES.import  NOTES.interface  NOTES.mkworld2  NOTES.part-of-book  NOTES.rename  NOTES.saving-space  NOTES.update-mechanism  Prefix_Form  README  grasp.sty  index.html  index.html.in  libraries.html.in  simple-monad.lhs
ghc/driver/: GetImports.hs  Jmakefile  Main.hs  Makefile  Package.hs  PackageSrc.hs  Utils.hs  driver.lit  ghc-asm-alpha.lprl  ghc-asm-hppa.lprl  ghc-asm-iX86.lprl  ghc-asm-m68k.lprl  ghc-asm-mips.lprl  ghc-asm-sgi.prl  ghc-asm-solaris.lprl  ghc-asm-sparc.lprl  ghc-asm.lprl  ghc-consist.lprl  ghc-iface.lprl  ghc-recomp.lprl  ghc-split.lprl  ghc-usage.txt  ghc.lprl  ghc5.sh  ghci.sh  ordering-passes  prefix.txt  test_mangler
ghc/includes/: AgeProfile.lh  Assembler.h  (+111 more)
haddock-api/: .ghci  .hspec-failures  LICENSE  haddock-api.cabal  hie.yaml
haddock-library/: .ghci  CHANGES.md  haddock-library.cabal  hie.yaml
haddock-test/: haddock-test.cabal
hadrian/: .ghci  .ghci.sh.swp  .gitignore  .travis.yml  README.md  appveyor.yml  build  build-cabal  build-cabal.bat  build-stack  build-stack-nix  build-stack.bat  build.bat  build.cabal.bat  build.cabal.offline.sh  build.cabal.sh  build.nix.sh  build.sh  build.stack.bat  build.stack.nix.sh  build.stack.sh  cabal.project  ci.project  circle.yml  completion.sh  ghci  ghci-cabal  ghci-cabal.in  ghci-multi  ghci-multi-cabal.in  ghci-stack  ghci-stack.in  ghci.cabal.sh  ghci.sh  ghci.stack.sh  hadrian.cabal  hie-bios  hie-bios.bat  hie.yaml  lint  (+3 more)
iserv/: Main.hs  ghc.mk  iserv-bin.cabal  iservmain.c
libraries/: .darcs-boring  Makefile  Makefile.common  Makefile.inc  Makefile.local  aclocal.m4  addupstreams.py  boot-packages  cabal-bin.hs  cabal.hs  configure.ac  core-packages  default-packages  extra-packages  gen_contents_index  ifBuildable.hs  installPackage.hs  libraries-footer.txt  libraries-header.txt  prologue.txt
rts/: .gitignore  .tsan-suppressions  .ubsan-suppressions  ARMOutlineAtomicsSymbols.h  ASAN.h  Adjustor.c  Adjustor.h  AdjustorAsm.S  AllocArray.c  AllocArray.h  Apply.cmm  Apply.h  Arena.c  Arena.h  AutoApply.cmm  AutoApply.h  AutoApplyVecs.h  AutoApply_V16.cmm  AutoApply_V32.cmm  AutoApply_V64.cmm  AwaitEvent.h  BeginPrivate.h  BlockAlloc.c  BuiltinClosures.c  BuiltinClosures.h  Capability.c  Capability.h  CheckUnload.c  CheckUnload.h  CheckVectorSupport.c  CheckVectorSupport.h  CloneStack.c  CloneStack.h  ClosureFlags.c  ClosureSize.c  ClosureTable.c  ClosureTable.h  Compact.cmm  ConfigLocal.h.post  ConfigLocal.h.pre  (+223 more)
rts-fs/: README  fs.c  rts-fs.cabal
rts-headers/: rts-headers.cabal
test-jsem/: .gitignore  CHANGELOG.md  cabal.project  ghc-shim.hs  test-jsem.cabal  test-jsem.hs
(+56397 files in other folders)
